@@ -61,8 +61,7 @@ public class ServiceLoaderTest {
 
 	Assert.assertTrue(//
 		StreamUtils.iteratorToStream(ServiceLoader.load(IHarvestedQueryConnector.class).iterator())
-			.filter(c -> c.getClass().equals(CSWConnectorWrapper.class)).//
-			findFirst().isPresent());//
+			.anyMatch(c -> c.getClass().equals(CSWConnectorWrapper.class)));//
 
     }
 
@@ -71,9 +70,9 @@ public class ServiceLoaderTest {
 
 	ServiceLoader<CSWConnector> loader = ServiceLoader.load(CSWConnector.class);
 
-	Assert.assertEquals(25, StreamUtils.iteratorToStream(loader.iterator()).count());
+	Assert.assertEquals(27, StreamUtils.iteratorToStream(loader.iterator()).count());
 
-	List<String> types = StreamUtils.iteratorToStream(loader.iterator()).map(c -> c.getType()).collect(Collectors.toList());
+	List<String> types = StreamUtils.iteratorToStream(loader.iterator()).map(CSWConnector::getType).toList();
 
 	Assert.assertTrue(types.contains(CSWConnector.TYPE));
 	Assert.assertTrue(types.contains(CSWBLUECLOUDConnector.TYPE));
