@@ -22,10 +22,7 @@ package eu.essi_lab.cfga.gui;
  */
 
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -69,7 +66,7 @@ import eu.essi_lab.cfga.gui.components.TabsWithContent;
 import eu.essi_lab.cfga.gui.dialog.EnhancedDialog;
 import eu.essi_lab.cfga.gui.dialog.NotificationDialog;
 import eu.essi_lab.cfga.gui.extension.ComponentInfo;
-import eu.essi_lab.cfga.gui.extension.TabInfo;
+import eu.essi_lab.cfga.gui.extension.TabDescriptor;
 import eu.essi_lab.cfga.gui.extension.directive.AddDirective;
 import eu.essi_lab.cfga.gui.extension.directive.DirectiveManager;
 import eu.essi_lab.cfga.gui.extension.directive.EditDirective;
@@ -86,28 +83,28 @@ import eu.essi_lab.messages.web.WebRequest;
 public abstract class ConfigurationView extends AppLayout implements ConfigurationChangeListener, DomEventListener {
 
     private TabsWithContent tabs;
-    private HorizontalLayout navbarContent;
-    private Label headerLabel;
-    private Image headerImage;
-    private DrawerToggle drawerToggle;
+    private final HorizontalLayout navbarContent;
+    private final Label headerLabel;
+    private final Image headerImage;
+    private final DrawerToggle drawerToggle;
     private boolean drawerOpened;
 
     // for test purpose, shows only the selected tab or all if -1
-    private int oneTab = -1;
+    private final int oneTab = -1;
     private Configuration configuration;
 
     /**
      * 
      */
-    private Button saveButton;
+    private final Button saveButton;
     protected boolean tabAlreadyOpen;
-    Label infoLabel;
+    final Label infoLabel;
 
     /**
      * 
      */
     CustomButton logoutButton;
-    private String requestURL;
+    private final String requestURL;
     private static String ownerBrowserAdress;
 
     /**
@@ -143,7 +140,7 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 	if (!xForwardedForHeaders.isEmpty()) {
 
-	    address = xForwardedForHeaders.get(0);
+	    address = xForwardedForHeaders.getFirst();
 	}
 
 	GSLoggerFactory.getLogger(getClass()).info("Browser address: {}", address);
@@ -177,15 +174,12 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 	drawerToggle = new DrawerToggle();
 	drawerToggle.setIcon(VaadinIcon.ANGLE_DOUBLE_LEFT.create());
-	drawerToggle.addClickListener(new ComponentEventListener<ClickEvent<Button>>() {
-	    @Override
-	    public void onComponentEvent(ClickEvent<Button> event) {
-		drawerOpened = !drawerOpened;
-		if (drawerOpened) {
-		    drawerToggle.setIcon(VaadinIcon.ANGLE_DOUBLE_LEFT.create());
-		} else {
-		    drawerToggle.setIcon(VaadinIcon.ANGLE_DOUBLE_RIGHT.create());
-		}
+	drawerToggle.addClickListener((ComponentEventListener<ClickEvent<Button>>) event -> {
+	    drawerOpened = !drawerOpened;
+	    if (drawerOpened) {
+		drawerToggle.setIcon(VaadinIcon.ANGLE_DOUBLE_LEFT.create());
+	    } else {
+		drawerToggle.setIcon(VaadinIcon.ANGLE_DOUBLE_RIGHT.create());
 	    }
 	});
 
@@ -212,14 +206,8 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 	infoLabel.setWidth(560, Unit.PIXELS);
 	infoLabel.setHeight(30, Unit.PIXELS);
 
-	saveButton = ConfigurationViewFactory.createSaveButton(new ComponentEventListener<ClickEvent<Button>>() {
-
-	    @Override
-	    public void onComponentEvent(ClickEvent<Button> event) {
-
-		onSaveButtonClicked(event);
-	    }
-	});
+	saveButton = ConfigurationViewFactory.createSaveButton(
+		(ComponentEventListener<ClickEvent<Button>>) this::onSaveButtonClicked);
 
 	saveButton.setEnabled(false);
 	// hides the save button, shows it again if initialized, authorized and the tab was closed
@@ -355,26 +343,18 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 	    UI.getCurrent().getElement().addEventListener("click", this);
 
-	    UI.getCurrent().addAttachListener(new ComponentEventListener<AttachEvent>() {
+	    UI.getCurrent().addAttachListener((ComponentEventListener<AttachEvent>) event -> {
 
-		@Override
-		public void onComponentEvent(AttachEvent event) {
+		IdleTracker.getInstance().reset();
 
-		    IdleTracker.getInstance().reset();
-
-		    onAttachEvent(event);
-		}
+		onAttachEvent(event);
 	    });
 
-	    UI.getCurrent().addDetachListener(new ComponentEventListener<DetachEvent>() {
+	    UI.getCurrent().addDetachListener((ComponentEventListener<DetachEvent>) event -> {
 
-		@Override
-		public void onComponentEvent(DetachEvent event) {
+		IdleTracker.getInstance().reset();
 
-		    IdleTracker.getInstance().reset();
-
-		    onDetachEvent(event);
-		}
+		onDetachEvent(event);
 	    });
 	}
 
@@ -520,11 +500,11 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
     }
 
     /**
-     * {@link ComponentInfo} instances and the related {@link TabInfo}, can be defined to manage one or more
+     * {@link ComponentInfo} instances and the related {@link TabDescriptor}, can be defined to manage one or more
      * {@link Setting}s.<br>
-     * If the {@link RemoveDirective} of the {@link TabInfo} allows the removal of
+     * If the {@link RemoveDirective} of the {@link TabDescriptor} allows the removal of
      * all settings, when the view is initialized and there is no settings coupled with the {@link ComponentInfo},
-     * the {@link ComponentInfo} and its {@link TabInfo} cannot be found and as consequence, the related tab cannot be
+     * the {@link ComponentInfo} and its {@link TabDescriptor} cannot be found and as consequence, the related tab cannot be
      * rendered.<br>
      * In this case, it will no longer be possible to add or remove that kind of settings just because there
      * is no tab with the required {@link AddDirective}.<br>
@@ -669,11 +649,11 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 	headerImage.setSrc(source);
 
 	if (height > 0) {
-	    headerImage.setHeight(String.valueOf(height) + "px");
+	    headerImage.setHeight(height + "px");
 	}
 
 	if (width > 0) {
-	    headerImage.setWidth(String.valueOf(width) + "px");
+	    headerImage.setWidth(width + "px");
 	}
     }
 
@@ -693,23 +673,16 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
      */
     public void setHeaderImage(InputStream source, int width, int height) {
 
-	StreamResource resource = new StreamResource("icon", new InputStreamFactory() {
-
-	    @Override
-	    public InputStream createInputStream() {
-
-		return source;
-	    }
-	});
+	StreamResource resource = new StreamResource("icon", (InputStreamFactory) () -> source);
 
 	headerImage.setSrc(resource);
 
 	if (height > 0) {
-	    headerImage.setHeight(String.valueOf(height) + "px");
+	    headerImage.setHeight(height + "px");
 	}
 
 	if (width > 0) {
-	    headerImage.setWidth(String.valueOf(width) + "px");
+	    headerImage.setWidth(width + "px");
 	}
     }
 
@@ -773,16 +746,16 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
     }
 
     /**
-     * @param tabInfo
+     * @param tabDescriptor
      * @return
      */
-    public List<Setting> retrieveTabSettings(TabInfo tabInfo) {
+    public List<Setting> retrieveTabSettings(TabDescriptor tabDescriptor) {
 
 	List<Setting> allSetting = configuration.list();
 
-	HashMap<TabInfo, List<Setting>> tabInfoMap = createTabInfoMap(allSetting);
+	HashMap<TabDescriptor, List<Setting>> tabInfoMap = createTabInfoMap(allSetting);
 
-	return tabInfoMap.getOrDefault(tabInfo, new ArrayList<Setting>());
+	return tabInfoMap.getOrDefault(tabDescriptor, new ArrayList<>());
     }
 
     /**
@@ -791,7 +764,7 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
     protected void onSettingPut(List<Setting> settings) {
 
 	GSLoggerFactory.getLogger(getClass()).debug("Setting {} put",
-		settings.stream().map(s -> s.getName()).collect(Collectors.joining(",")));
+		settings.stream().map(Setting::getName).collect(Collectors.joining(",")));
     }
 
     /**
@@ -799,8 +772,8 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
      */
     protected void onSettingReplaced(List<Setting> settings) {
 
-	GSLoggerFactory.getLogger(getClass()).debug("Setting {} repalced",
-		settings.stream().map(s -> s.getName()).collect(Collectors.joining(",")));
+	GSLoggerFactory.getLogger(getClass()).debug("Setting {} replaced",
+		settings.stream().map(Setting::getName).collect(Collectors.joining(",")));
     }
 
     /**
@@ -809,7 +782,7 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
     protected void onSettingRemoved(List<Setting> settings) {
 
 	GSLoggerFactory.getLogger(getClass()).debug("Setting {} removed",
-		settings.stream().map(s -> s.getName()).collect(Collectors.joining(",")));
+		settings.stream().map(Setting::getName).collect(Collectors.joining(",")));
     }
 
     /**
@@ -843,9 +816,9 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 	List<Setting> allSetting = configuration.list();
 
-	HashMap<TabInfo, List<Setting>> tabInfoMap = createTabInfoMap(allSetting);
+	HashMap<TabDescriptor, List<Setting>> tabInfoMap = createTabInfoMap(allSetting);
 
-	List<TabInfo> tabInfoList = new ArrayList<>(tabInfoMap.keySet());
+	List<TabDescriptor> tabDescriptorList = new ArrayList<>(tabInfoMap.keySet());
 
 	//
 	//
@@ -855,13 +828,13 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 	for (ComponentInfo componentInfo : additionalComps) {
 
-	    Optional<TabInfo> tabInfo = componentInfo.getTabInfo();
+	    Optional<TabDescriptor> tabInfo = componentInfo.getTabDescriptor();
 
 	    if (tabInfo.isPresent()) {
 
 		int index = tabInfo.get().getIndex();
 
-		boolean missing = tabInfoList.//
+		boolean missing = tabDescriptorList.//
 			stream().//
 			filter(tab -> tab.getIndex() == index).//
 			findFirst().//
@@ -869,7 +842,7 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 		if (missing) {
 
-		    tabInfoList.add(tabInfo.get());
+		    tabDescriptorList.add(tabInfo.get());
 		}
 	    }
 	}
@@ -878,36 +851,36 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 	//
 	//
 
-	tabInfoList = tabInfoList.//
+	tabDescriptorList = tabDescriptorList.//
 		stream().//
-		sorted((i1, i2) -> Integer.compare(i1.getIndex(), i2.getIndex())).//
+		sorted(Comparator.comparingInt(TabDescriptor::getIndex)).//
 		collect(Collectors.toList());
 
 	//
 	//
 	//
 
-	for (TabInfo tabInfo : tabInfoList) {
+	for (TabDescriptor tabDescriptor : tabDescriptorList) {
 
-	    if (oneTab >= 0 && tabInfo.getIndex() == oneTab || oneTab < 0) {
+	    if (oneTab < 0 || tabDescriptor.getIndex() == oneTab) {
 
-		List<Setting> settings = tabInfoMap.getOrDefault(tabInfo, new ArrayList<Setting>());
+		List<Setting> settings = tabInfoMap.getOrDefault(tabDescriptor, new ArrayList<>());
 
 		//
 		//
 		//
 
-		DirectiveManager directiveManager = tabInfo.getDirectiveManager();
+		DirectiveManager directiveManager = tabDescriptor.getDirectiveManager();
 
-		Optional<AddDirective> addDirective = directiveManager.getDirective(AddDirective.class);
+		Optional<AddDirective> addDirective = directiveManager.get(AddDirective.class);
 
-		Optional<RemoveDirective> removeDirective = directiveManager.getDirective(RemoveDirective.class);
+		Optional<RemoveDirective> removeDirective = directiveManager.get(RemoveDirective.class);
 
-		Optional<EditDirective> editDirective = directiveManager.getDirective(EditDirective.class);
+		Optional<EditDirective> editDirective = directiveManager.get(EditDirective.class);
 
-		Optional<ShowDirective> showDirective = directiveManager.getDirective(ShowDirective.class);
+		Optional<ShowDirective> showDirective = directiveManager.get(ShowDirective.class);
 
-		String tabName = "Tab#" + tabInfo.getIndex();
+		String tabName = "Tab#" + tabDescriptor.getIndex();
 
 		if (showDirective.isPresent()) {
 
@@ -920,12 +893,11 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 		Optional<ComponentInfo> additionalComp = additionalComps.//
 			stream().//
-			filter(c -> c.getTabInfo().isPresent()).//
-			filter(c -> c.getTabInfo().get().getIndex() == tabInfo.getIndex()).//
+			filter(c -> c.getTabDescriptor().isPresent()).//
+			filter(c -> c.getTabDescriptor().get().getIndex() == tabDescriptor.getIndex()).//
 			findFirst();
 
-		ComponentInfo componentInfo = additionalComp.isPresent() ? additionalComp.get()
-			: settings.get(0).getExtension(ComponentInfo.class).get();
+		ComponentInfo componentInfo = additionalComp.orElseGet(() -> settings.getFirst().getExtension(ComponentInfo.class).get());
 
 		Orientation orientation = componentInfo.getOrientation();
 
@@ -937,6 +909,7 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 			configuration, //
 			orientation, //
 			tabName, //
+			showDirective.flatMap(ShowDirective::getDescription),//
 			addDirective, //
 			removeDirective, //
 			editDirective);
@@ -948,9 +921,9 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 		//
 		//
 
-		container.init(this, configuration, componentInfo, tabInfo);
+		container.init(this, configuration, componentInfo, tabDescriptor);
 
-		if (tabInfo.getIndex() == 0) {
+		if (tabDescriptor.getIndex() == 0) {
 
 		    container.render();
 		}
@@ -959,13 +932,13 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 		//
 		//
 
-		if (oneTab >= 0 && tabInfo.getIndex() == oneTab) {
+		if (oneTab >= 0 && tabDescriptor.getIndex() == oneTab) {
 		    addTab(0, tabName, container);
 		    return;
 
 		} else if (oneTab < 0) {
 
-		    addTab(tabInfo.getIndex(), tabName, container);
+		    addTab(tabDescriptor.getIndex(), tabName, container);
 		}
 	    }
 	}
@@ -992,9 +965,9 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
      * @param settings
      * @return
      */
-    private HashMap<TabInfo, List<Setting>> createTabInfoMap(List<Setting> settings) {
+    private HashMap<TabDescriptor, List<Setting>> createTabInfoMap(List<Setting> settings) {
 
-	HashMap<TabInfo, List<Setting>> map = new HashMap<>();
+	HashMap<TabDescriptor, List<Setting>> map = new HashMap<>();
 
 	for (Setting setting : settings) {
 
@@ -1002,17 +975,11 @@ public abstract class ConfigurationView extends AppLayout implements Configurati
 
 	    if (extension.isPresent()) {
 
-		Optional<TabInfo> tabInfo = extension.get().getTabInfo();
+		Optional<TabDescriptor> tabInfo = extension.get().getTabDescriptor();
 
 		if (tabInfo.isPresent()) {
 
-		    List<Setting> list = map.get(tabInfo.get());
-
-		    if (list == null) {
-
-			list = new ArrayList<Setting>();
-			map.put(tabInfo.get(), list);
-		    }
+		    List<Setting> list = map.computeIfAbsent(tabInfo.get(), k -> new ArrayList<>());
 
 		    list.add(setting);
 		}
