@@ -21,45 +21,26 @@ package eu.essi_lab.messages;
  * #L%
  */
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.locationtech.jts.io.ParseException;
-
 import eu.essi_lab.lib.geo.BBOXUtils;
 import eu.essi_lab.lib.utils.GSLoggerFactory;
 import eu.essi_lab.lib.utils.ISO8601DateTimeUtils;
 import eu.essi_lab.messages.ResourceSelector.IndexesPolicy;
 import eu.essi_lab.messages.ResourceSelector.ResourceSubset;
-import eu.essi_lab.messages.bond.Bond;
-import eu.essi_lab.messages.bond.BondFactory;
-import eu.essi_lab.messages.bond.BondOperator;
-import eu.essi_lab.messages.bond.LogicalBond;
-import eu.essi_lab.messages.bond.QueryableBond;
-import eu.essi_lab.messages.bond.ResourcePropertyBond;
-import eu.essi_lab.messages.bond.RuntimeInfoElementBond;
-import eu.essi_lab.messages.bond.SimpleValueBond;
-import eu.essi_lab.messages.bond.SpatialBond;
-import eu.essi_lab.messages.bond.ViewBond;
+import eu.essi_lab.messages.bond.*;
 import eu.essi_lab.messages.bond.parser.DiscoveryBondHandler;
 import eu.essi_lab.messages.bond.parser.DiscoveryBondParser;
 import eu.essi_lab.messages.bond.spatial.SpatialExtent;
 import eu.essi_lab.messages.bond.spatial.WKT;
 import eu.essi_lab.messages.stats.StatisticsMessage;
-import eu.essi_lab.model.GSProperty;
-import eu.essi_lab.model.GSSource;
-import eu.essi_lab.model.Queryable;
-import eu.essi_lab.model.ResultsPriority;
-import eu.essi_lab.model.RuntimeInfoElement;
-import eu.essi_lab.model.StorageInfo;
+import eu.essi_lab.model.*;
 import eu.essi_lab.model.resource.GSResource;
 import eu.essi_lab.model.resource.MetadataElement;
 import eu.essi_lab.model.resource.RankingStrategy;
+import org.locationtech.jts.io.ParseException;
+
+import java.io.Serial;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * @author Fabrizio
@@ -67,33 +48,25 @@ import eu.essi_lab.model.resource.RankingStrategy;
 public class DiscoveryMessage extends QueryInitializerMessage {
 
     /**
-     * forceEiffelAPIDiscoveryOption=disabled
-     * eiffelUseFilterAPICache=true
-     * eiffelUseMergedIdsCache=true
-     * eiffelSortAndFilterAPI=FILTER
-     * eiffelAPISearchMinScore=0.7
-     * eiffelAPISearchQueryMethod=semantic
-     * eiffelAPISearchTermsSignificance=none
-     * eiffelAPIFilterTreshold=0.7
-     * eiffelAPIMaxSortIdentifiers=10000
-     * eiffelSortAndFilterPartitionSize=10000
-     * eiffelFilterAndSortSplitTreshold=3
-     * 
+     * forceEiffelAPIDiscoveryOption=disabled eiffelUseFilterAPICache=true eiffelUseMergedIdsCache=true eiffelSortAndFilterAPI=FILTER
+     * eiffelAPISearchMinScore=0.7 eiffelAPISearchQueryMethod=semantic eiffelAPISearchTermsSignificance=none eiffelAPIFilterTreshold=0.7
+     * eiffelAPIMaxSortIdentifiers=10000 eiffelSortAndFilterPartitionSize=10000 eiffelFilterAndSortSplitTreshold=3
+     *
      * @author Fabrizio
      */
     public enum EiffelAPIDiscoveryOption {
 
 	/**
-	 * 
+	 *
 	 */
 	SORT_AND_FILTER,
 	/**
-	 * 
+	 *
 	 */
 	FILTER_AND_SORT;
 
 	/**
-	 * 
+	 *
 	 */
 	public static final String EIFFEL_S3_VIEW_ID = "eiffels3";
 
@@ -118,8 +91,9 @@ public class DiscoveryMessage extends QueryInitializerMessage {
     }
 
     /**
-     * 
+     *
      */
+    @Serial
     private static final long serialVersionUID = -1949423411370425086L;
 
     private static final String RANKING = "ranking";
@@ -135,25 +109,24 @@ public class DiscoveryMessage extends QueryInitializerMessage {
     private static final String TF_TARGETS = "TF_TARGETS";
     private static final String EIFFEL_DISCOVERY_OPTION = "EIFFEL_DISCOVERY_OPTION";
     private static final String INLCUDE_COUNT_IN_RETRIEVAL = "INLCUDE_COUNT_IN_RETRIEVAL";
+    private static final String RSM_THREADS_COUNT = "rsmThreadsCount";
 
     /**
-     * 
+     *
      */
     public static final int DEFAULT_MAX_TERM_FREQUENCY_MAP_ITEMS = 50;
 
     /**
-     * 
+     *
      */
     private static final int USER_SELECTION = 10;
 
-    private List<GSResource> parents;
-
     /**
-     * 
+     *
      */
     public DiscoveryMessage() {
 
-	parents = new ArrayList<>();
+	List<GSResource> parents = new ArrayList<>();
 
 	setIncludeDeleted(false);
 	setMaxFrequencyMapItems(DEFAULT_MAX_TERM_FREQUENCY_MAP_ITEMS);
@@ -201,7 +174,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
 	setSources(accessMessage.getSources());
 	setCurrentUser(accessMessage.getCurrentUser().orElse(null));
-	accessMessage.getView().ifPresent(view -> setView(view));
+	accessMessage.getView().ifPresent(this::setView);
 	setWebRequest(accessMessage.getWebRequest());
 	setDataBaseURI(accessMessage.getDataBaseURI());
 	setQueryRegistrationEnabled(false);
@@ -238,12 +211,12 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
 	setSources(statMessage.getSources());
 	setCurrentUser(statMessage.getCurrentUser().orElse(null));
-	statMessage.getView().ifPresent(view -> setView(view));
+	statMessage.getView().ifPresent(this::setView);
 	setWebRequest(statMessage.getWebRequest());
 	setDataBaseURI(statMessage.getDataBaseURI());
 	setPage(statMessage.getPage());
 	setPermittedBond(statMessage.getPermittedBond());
-	statMessage.getUserBond().ifPresent(b -> setUserBond(b));
+	statMessage.getUserBond().ifPresent(this::setUserBond);
 	setNormalizedBond(statMessage.getNormalizedBond());
 
 	setQueryRegistrationEnabled(false);
@@ -277,9 +250,9 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
 	Optional<SortedFields> sortedFields = getSortedFields();
 	sortedFields.ifPresent(d -> map.put(RuntimeInfoElement.DISCOVERY_MESSAGE_ORDERING_DIRECTION.getName(),
-		Arrays.asList(d.getFields().get(0).getValue().getLabel())));
+		Arrays.asList(d.getFields().getFirst().getValue().getLabel())));
 	sortedFields.ifPresent(d -> map.put(RuntimeInfoElement.DISCOVERY_MESSAGE_ORDERING_PROPERTY.getName(),
-		Arrays.asList(d.getFields().get(0).getKey().getName())));
+		Arrays.asList(d.getFields().getFirst().getKey().getName())));
 
 	int size = getPage().getSize();
 	map.put(RuntimeInfoElement.DISCOVERY_MESSAGE_PAGE_SIZE.getName(), Arrays.asList(String.valueOf(size)));
@@ -294,9 +267,9 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 	List<GSSource> sources = getSources();
 	if (sources.size() <= USER_SELECTION) {
 	    map.put(RuntimeInfoElement.DISCOVERY_MESSAGE_SOURCE_ID.getName(),
-		    sources.stream().map(s -> s.getUniqueIdentifier()).collect(Collectors.toList()));
+		    sources.stream().map(GSSource::getUniqueIdentifier).collect(Collectors.toList()));
 	    map.put(RuntimeInfoElement.DISCOVERY_MESSAGE_SOURCE_LABEL.getName(),
-		    sources.stream().map(s -> s.getLabel()).collect(Collectors.toList()));
+		    sources.stream().map(GSSource::getLabel).collect(Collectors.toList()));
 	}
 
 	Optional<Bond> userBond = getUserBond();
@@ -320,7 +293,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
     @Deprecated
     public void setQueryRegistrationEnabled(boolean enabled) {
 
-	getHeader().add(new GSProperty<Boolean>(QUERY_REGISTRATION, enabled));
+	getHeader().add(new GSProperty<>(QUERY_REGISTRATION, enabled));
     }
 
     /**
@@ -330,6 +303,22 @@ public class DiscoveryMessage extends QueryInitializerMessage {
     public boolean isQueryRegistrationEnabled() {
 
 	return getHeader().get(QUERY_REGISTRATION, Boolean.class);
+    }
+
+    /**
+     * @return
+     */
+    public Optional<Integer> getResultSetMapperThreadsCount() {
+
+	return Optional.ofNullable(getHeader().get(RSM_THREADS_COUNT, Integer.class));
+    }
+
+    /**
+     * @param count
+     */
+    public void setResultSetMapperThreadsCount(int count) {
+
+	getHeader().add(new GSProperty<>(RSM_THREADS_COUNT, count));
     }
 
     /**
@@ -344,7 +333,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
     public void setMaxFrequencyMapItems(int max) {
 
-	getHeader().add(new GSProperty<Integer>(MAX_TERM_FREQUENCY_MAP_ITEMS, max));
+	getHeader().add(new GSProperty<>(MAX_TERM_FREQUENCY_MAP_ITEMS, max));
     }
 
     public Optional<String> getQuakeMLEventOrder() {
@@ -354,7 +343,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
     public void setQuakeMLEventOrder(String order) {
 
-	getHeader().add(new GSProperty<String>(QUAKE_ML_EVENT_ORDER, order));
+	getHeader().add(new GSProperty<>(QUAKE_ML_EVENT_ORDER, order));
     }
 
     /**
@@ -372,7 +361,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
      */
     public void setIncludeDeleted(boolean include) {
 
-	getHeader().add(new GSProperty<Boolean>(INLCUDE_DELETED, include));
+	getHeader().add(new GSProperty<>(INLCUDE_DELETED, include));
     }
 
     /**
@@ -380,7 +369,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
      */
     public void setRankingStrategy(RankingStrategy strategy) {
 
-	getHeader().add(new GSProperty<RankingStrategy>(RANKING, strategy));
+	getHeader().add(new GSProperty<>(RANKING, strategy));
     }
 
     /**
@@ -395,13 +384,13 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
     public void setResourceSelector(ResourceSelector selector) {
 
-	getHeader().add(new GSProperty<ResourceSelector>(RESOURCE_SELECTOR, selector));
+	getHeader().add(new GSProperty<>(RESOURCE_SELECTOR, selector));
     }
 
     /**
-     * Used to indicate the type of results expected (e.g. datasets only, collection only or datasets and collection).
-     * This is useful for the case of mixed sources, to indicate the desired results
-     * 
+     * Used to indicate the type of results expected (e.g. datasets only, collection only or datasets and collection). This is useful for
+     * the case of mixed sources, to indicate the desired results
+     *
      * @return
      */
     public Optional<ResultsPriority> getResultsPriority() {
@@ -410,14 +399,14 @@ public class DiscoveryMessage extends QueryInitializerMessage {
     }
 
     /**
-     * Used to indicate the type of results expected (e.g. datasets only, collection only or datasets and collection).
-     * This is useful for the case of mixed sources, to indicate the desired results
-     * 
+     * Used to indicate the type of results expected (e.g. datasets only, collection only or datasets and collection). This is useful for
+     * the case of mixed sources, to indicate the desired results
+     *
      * @param results priority
      */
     public void setResultsPriority(ResultsPriority priority) {
 
-	getHeader().add(new GSProperty<ResultsPriority>(RESULTS_PRIORITY, priority));
+	getHeader().add(new GSProperty<>(RESULTS_PRIORITY, priority));
     }
 
     /**
@@ -425,7 +414,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
      */
     public void setDistinctValuesElement(Queryable element) {
 
-	getHeader().add(new GSProperty<Queryable>(DISINCT_VALUES_ELEMENT, element));
+	getHeader().add(new GSProperty<>(DISINCT_VALUES_ELEMENT, element));
     }
 
     /**
@@ -469,7 +458,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
      */
     public void setIncludeCountInRetrieval(boolean include) {
 
-	getHeader().add(new GSProperty<Boolean>(INLCUDE_COUNT_IN_RETRIEVAL, include));
+	getHeader().add(new GSProperty<>(INLCUDE_COUNT_IN_RETRIEVAL, include));
     }
 
     // ----------------------------------------
@@ -507,20 +496,16 @@ public class DiscoveryMessage extends QueryInitializerMessage {
     public boolean isDataFolderCheckEnabled() {
 
 	Boolean enabled = getHeader().get(DATA_FOLDER_CHECK, Boolean.class);
-	if (enabled == null) {
-	    return true;
-	}
-
-	return false;
+	return enabled == null;
     }
 
     /**
-     * 
+     *
      */
     @Deprecated
     public void disableDataFolderCheck() {
 
-	getHeader().add(new GSProperty<Boolean>(DATA_FOLDER_CHECK, true));
+	getHeader().add(new GSProperty<>(DATA_FOLDER_CHECK, true));
     }
 
     /**
@@ -528,7 +513,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
      */
     public void enableEiffelAPIDiscoveryOption(EiffelAPIDiscoveryOption option) {
 
-	getHeader().add(new GSProperty<EiffelAPIDiscoveryOption>(EIFFEL_DISCOVERY_OPTION, option));
+	getHeader().add(new GSProperty<>(EIFFEL_DISCOVERY_OPTION, option));
     }
 
     /**
@@ -554,9 +539,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 	    @Override
 	    public void nonLogicalBond(Bond bond) {
 
-		if (bond instanceof QueryableBond) {
-
-		    QueryableBond<?> b = (QueryableBond<?>) bond;
+		if (bond instanceof QueryableBond<?> b) {
 
 		    if (b.getProperty() == MetadataElement.BOUNDING_BOX) {
 
@@ -633,9 +616,7 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 
 			map.put(getName() + RuntimeInfoElement.NAME_SEPARATOR + b.getProperty().getName(), list);
 		    }
-		}
-
-		else if (bond instanceof QueryableBond<?>) {
+		} else if (bond instanceof QueryableBond<?>) {
 
 		} else if (bond instanceof ViewBond) {
 
@@ -726,11 +707,9 @@ public class DiscoveryMessage extends QueryInitializerMessage {
 		    boolean weEqual = (Math.abs(w - e) < TOL);
 
 		    if (snEqual && weEqual) {
-			String shape = "POINT (" + ws + ")";
-			return shape;
+			return "POINT (" + ws + ")";
 		    } else if (!snEqual && !weEqual) {
-			String shape = "POLYGON ((" + ws + "," + wn + "," + en + "," + es + "," + ws + "))";
-			return shape;
+			return "POLYGON ((" + ws + "," + wn + "," + en + "," + es + "," + ws + "))";
 		    } else {
 			GSLoggerFactory.getLogger(DiscoveryMessage.class).warn("Not valid bbox {} {} {} {}", w, s, e, n);
 		    }
