@@ -25,8 +25,10 @@ package eu.essi_lab.messages.stats;
  */
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -47,6 +49,8 @@ public class ComputationResult {
     private String target;
     @XmlTransient
     private String value;
+    @XmlTransient
+    private Map<String, Map<String, String>> nestedProperties;
 
     /**
      * Separates the frequency item from the frequency value (e.g: some source idITEMSEP12)
@@ -56,7 +60,7 @@ public class ComputationResult {
     /**
      * @return
      */
-    @XmlAttribute(name = "target", required = false)
+    @XmlAttribute(name = "target")
     public String getTarget() {
 	return target;
     }
@@ -104,8 +108,8 @@ public class ComputationResult {
     @XmlTransient
     public List<TermFrequencyItem> getFrequencyItems() {
 
-	return Arrays.asList(getValue().split(" ")).//
-		stream().//
+	//
+	return Arrays.stream(getValue().split(" ")).//
 		map(f -> {
 
 		    if (f.equals("")) {
@@ -117,14 +121,16 @@ public class ComputationResult {
 
 		    String[] values = f.split(FREQUENCY_ITEM_SEP);
 		    try {
-			item.setTerm(URLDecoder.decode(values[0], "UTF-8"));
+			item.setTerm(URLDecoder.decode(values[0], StandardCharsets.UTF_8));
 
 		    } catch (Exception e) {
 		    }
 
 		    item.setDecodedTerm(values[0]);
-		    item.setFreq(Integer.valueOf(values[1]));
-
+		    item.setFreq(Integer.parseInt(values[1]));
+		    if (nestedProperties != null) {
+			item.setNestedProperties(nestedProperties.get(values[0]));
+		    }
 		    return item;
 
 		}).//
@@ -139,5 +145,15 @@ public class ComputationResult {
      */
     public void setValue(String value) {
 	this.value = value;
+    }
+
+    @XmlTransient
+    public Map<String, Map<String, String>> getNestedProperties() {
+	return nestedProperties;
+    }
+
+    public void setNestedProperties(Map<String, Map<String, String>> nestedProperties) {
+	this.nestedProperties = nestedProperties;
+
     }
 }
