@@ -21,8 +21,10 @@ package eu.essi_lab.messages.termfrequency;
  * #L%
  */
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.Map;
 
 import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.XmlTransient;
@@ -40,6 +42,8 @@ public class TermFrequencyItem {
     private String decodedTerm;
     @XmlElement(namespace = NameSpace.GS_DATA_MODEL_SCHEMA_URI)
     private int freq;
+    @XmlTransient
+    private Map<String, String> nestedProperties = new HashMap<>();
 
     public TermFrequencyItem() {
 	// nothing to init
@@ -49,7 +53,7 @@ public class TermFrequencyItem {
 	this.term = term;
 	try {
 
-	    this.decodedTerm = URLDecoder.decode(term, "UTF-8");
+	    this.decodedTerm = URLDecoder.decode(term, StandardCharsets.UTF_8);
 
 	} catch (Exception e) {
 
@@ -102,10 +106,9 @@ public class TermFrequencyItem {
 	if (object == null)
 	    return false;
 
-	if (!(object instanceof TermFrequencyItem))
+	if (!(object instanceof TermFrequencyItem item))
 	    return false;
 
-	TermFrequencyItem item = (TermFrequencyItem) object;
 	return this.freq == item.freq && //
 		this.term.equals(item.term);
     }
@@ -119,5 +122,14 @@ public class TermFrequencyItem {
     @Override
     public int hashCode() {
 	return toString().hashCode();
+    }
+
+    @XmlTransient
+    public Map<String, String> getNestedProperties() {
+	return nestedProperties;
+    }
+
+    public void setNestedProperties(Map<String, String> nestedProperties) {
+	this.nestedProperties = nestedProperties;
     }
 }
